@@ -5,12 +5,17 @@ import org.dbtest.threadbasedloadtester.utils.*;
 
 
 import java.net.http.HttpResponse;
+import java.util.Locale;
+import java.util.Random;
 
 public class Create {
     public static CrudUtils crudUtils = new CrudUtils();
     private static final String BASE_URL = "http://localhost:8080/api/products";
-    private static final int PRODUCTS_PER_THREAD = crudUtils.nr; // Hur många produkter varje tråd skapar
-    private static int threadCounter = 0; // För att ge varje tråd ett unikt start-ID
+    private static final int PRODUCTS_PER_THREAD = crudUtils.nr;
+    private static int threadCounter = 0;
+    static int nr_of_products = 0;
+
+    private static final Random random = new Random();
 
     public static synchronized int getNextThreadStart() {
         return threadCounter++ * PRODUCTS_PER_THREAD + 1;
@@ -21,22 +26,23 @@ public class Create {
         int endId = startId + PRODUCTS_PER_THREAD - 1;
 
         for (int i = startId; i <= endId; i++) {
-            String jsonPayload = """
-                    {
-                        "name": "Product %d",
-                        "description": "Load test item %d",
-                        "price": 2750.00,
-                        "stock": 10
-                    }
-                    """.formatted(i, i);
+            double price = 100 + (900 * random.nextDouble()); // Pris mellan 100.00 och 1000.00
+            int stock = random.nextInt(100) + 1; // Lager mellan 1 och 100
+
+            String jsonPayload = String.format(Locale.US,
+                    "{\"name\": \"Product %d\", \"description\": \"Load test item %d\", \"price\": %.2f, \"stock\": %d}",
+                    i, i, price, stock
+            );
 
             HttpResponse<String> response = HttpClientUtil.sendRequest(BASE_URL, "POST", jsonPayload);
             if (response != null) {
-                System.out.println("CREATE response for ID " + i + ": " + response.body());
+                //  System.out.println("CREATE response for ID " + i + ": " + response.body());
             } else {
                 System.out.println("CREATE request failed for ID " + i);
             }
+            nr_of_products++;
         }
+        System.out.println("Created " + nr_of_products + " products");
     }
 
     public static void main(String[] args) {
